--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cool-ascii-faces": "^1.3.4",
     "fastify": "^3.27.1",
     "fastify-swagger": "^4.15.0",
     "firebase": "^9.6.8",
